force-app/main/default/objects/HR_DocGen_Field__mdt/HR_DocGen_Field__mdt.object-meta.xml
<CustomObject>
    <description>One allow-listed JSON leaf path for a parent HR_DocGen_Schema__mdt version. Defines type, requiredness, blank handling, and limits used by the generic Apex validator. Contains no submitted request values.</description>
    <label>HR Doc Gen Field</label>
    <pluralLabel>HR Doc Gen Fields</pluralLabel>
</CustomObject>