force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Allowed_Values__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Values__c</fullName>
    <label>Allowed Values</label>
    <description>Optional JSON array of typed permitted values, for example [true] for attestation. Never stores submitted data.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>