force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Blank_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Blank_Behavior__c</fullName>
    <label>Blank Behavior</label>
    <description>One of emptyString, null, or omit; emptyString is valid only for text.</description>
    <length>20</length>
    <type>Text</type>
</CustomField>