force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <description>Label only, describing the kind of value expected at this path for review purposes.</description>
    <length>40</length>
    <type>Text</type>
</CustomField>