force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Json_Path__c.field-meta.xml
<CustomField>
    <fullName>Json_Path__c</fullName>
    <label>Json Path</label>
    <description>Exact allow-listed path used by Flow, Apex, and the Box template, for example employee.firstName.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>