force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Length__c</fullName>
    <label>Max Length</label>
    <description>Limits text length before serialization.</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>