force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <description>Unconditionally requires a nonblank value at this path. Conditional-required rules belong to Flow, not this field.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>