force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <label>Schema</label>
    <description>Enforces the parent schema-version relationship for this field definition.</description>
    <required>true</required>
    <type>MetadataRelationship</type>
    <referenceTo>HR_DocGen_Schema__mdt</referenceTo>
    <relationshipLabel>HR Doc Gen Fields</relationshipLabel>
    <relationshipName>HR_DocGen_Fields</relationshipName>
</CustomField>