force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <description>Deterministic validation and JSON-assembly order.</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>