force-app/main/default/objects/HR_DocGen_Field__mdt/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <label>Value Type</label>
    <description>One of text, date, number, or boolean.</description>
    <length>20</length>
    <type>Text</type>
</CustomField>